--- a/apps_product_creator/i18n/apps_product_creator.pot
+++ b/apps_product_creator/i18n/apps_product_creator.pot
@@ -1,22 +1,17 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * apps_product_creator
+#	* apps_product_creator
 #
-# Translators:
-# Quentin THEURET <odoo@kerpeo.com>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-02-08 01:39+0000\n"
-"PO-Revision-Date: 2018-02-08 01:39+0000\n"
-"Last-Translator: Quentin THEURET <odoo@kerpeo.com>, 2018\n"
-"Language-Team: French (https://www.transifex.com/oca/teams/23907/fr/)\n"
-"Language: fr\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: \n"
 
 #. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_odoo_module_product_qty
@@ -116,7 +111,7 @@ msgstr ""
 #. module: apps_product_creator
 #: model:ir.model,name:apps_product_creator.model_product_product
 msgid "Product"
-msgstr "Produit"
+msgstr ""
 
 #. module: apps_product_creator
 #: model:ir.model,name:apps_product_creator.model_product_template
@@ -154,3 +149,4 @@ msgstr ""
 #: model:ir.model,name:apps_product_creator.model_odoo_module
 msgid "odoo.module"
 msgstr ""
+
