--- a/apps_product_creator/i18n/es.po
+++ b/apps_product_creator/i18n/es.po
@@ -1,7 +1,7 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # * apps_product_creator
-# 
+#
 # Translators:
 # enjolras <yo@miguelrevilla.com>, 2018
 msgid ""
@@ -12,10 +12,10 @@ msgstr ""
 "PO-Revision-Date: 2018-02-10 01:37+0000\n"
 "Last-Translator: enjolras <yo@miguelrevilla.com>, 2018\n"
 "Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: apps_product_creator
@@ -67,6 +67,13 @@ msgstr "9.0"
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_author_ids
 msgid "Authors"
 msgstr "Autores"
+
+#. module: apps_product_creator
+#: model:ir.actions.server,name:apps_product_creator.cron_update_organization_ir_actions_server
+#: model:ir.cron,cron_name:apps_product_creator.cron_update_organization
+#: model:ir.cron,name:apps_product_creator.cron_update_organization
+msgid "Create product variants for each module version"
+msgstr ""
 
 #. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_github_url
