[IMP] while clean the odoo module version archive the product (#36)
* [IMP] while clean the odoo module version archive the product

* [FIX]Added new line at the end of file

* [FIX] fix some typo

* [IMP]improve logic with less iterations

--- a/apps_product_creator/i18n/apps_product_creator.pot
+++ b/apps_product_creator/i18n/apps_product_creator.pot
@@ -240,3 +240,8 @@ msgstr ""
 msgid "odoo.module"
 msgstr ""
 
+#. module: apps_product_creator
+#: model:ir.model,name:apps_product_creator.model_odoo_module_version
+msgid "odoo.module.version"
+msgstr ""
+
