update products attributes and create attribute values (#40)
* [FIX]update the product for the new version

* [FIX]max version problem and also rewrite logic so the from fronend if the version is not selected manually then the default(with less sequence) will be downloaded

* [IMP]added technical name search functionality

* change version number

* [IMP]Merged create and update product cron job

* [FIX]fix variable names

--- a/apps_product_creator/i18n/apps_product_creator.pot
+++ b/apps_product_creator/i18n/apps_product_creator.pot
@@ -72,7 +72,7 @@ msgstr ""
 #: model:ir.actions.server,name:apps_product_creator.cron_update_organization_ir_actions_server
 #: model:ir.cron,cron_name:apps_product_creator.cron_update_organization
 #: model:ir.cron,name:apps_product_creator.cron_update_organization
-msgid "Create product variants for each module version"
+msgid "Create/Update product variants for each module version"
 msgstr ""
 
 #. module: apps_product_creator
