Fix Bad rendering of links inside README (#42)
* [FIX][#37]fix rendering from README

* [ADD]added CONTRIBUTORS

* [FIX] Sorting problem. sorted(for getting default version) as similar as it is sorted from website view

--- a/apps_product_creator/i18n/es.po
+++ b/apps_product_creator/i18n/es.po
@@ -64,6 +64,11 @@ msgid "9.0"
 msgstr "9.0"
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.accounting
+msgid "Accounting"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_author_ids
 msgid "Authors"
 msgstr "Autores"
@@ -72,7 +77,22 @@ msgstr "Autores"
 #: model:ir.actions.server,name:apps_product_creator.cron_update_organization_ir_actions_server
 #: model:ir.cron,cron_name:apps_product_creator.cron_update_organization
 #: model:ir.cron,name:apps_product_creator.cron_update_organization
-msgid "Create product variants for each module version"
+msgid "Create/Update product variants for each module version"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.discuss
+msgid "Discuss"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.document_management
+msgid "Document Management"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.extra_tools
+msgid "Extra Tools"
 msgstr ""
 
 #. module: apps_product_creator
@@ -86,10 +106,20 @@ msgid "HTML of the RST Description"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.human_resources
+msgid "Human Resources"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_image_module
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_template_image_module
 msgid "Icon Image"
 msgstr "Icono"
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.industries
+msgid "Industries"
+msgstr ""
 
 #. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_license_id
@@ -97,8 +127,24 @@ msgid "License"
 msgstr "Licencia"
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.localization
+msgid "Localization"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.manufacturing
+msgid "Manufacturing"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.ui.view,arch_db:apps_product_creator.product_product_form_view
 msgid "Module Informations"
+msgstr "Informaciones del módulo"
+
+#. module: apps_product_creator
+#: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_development_status
+#, fuzzy
+msgid "Module maturity"
 msgstr "Informaciones del módulo"
 
 #. module: apps_product_creator
@@ -114,6 +160,16 @@ msgid "Odoo Version"
 msgstr "Versión Odoo"
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.other
+msgid "Other"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.point_of_sale
+msgid "Point of Sale"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model,name:apps_product_creator.model_product_product
 msgid "Product"
 msgstr "Producto"
@@ -125,9 +181,30 @@ msgid "Product Template"
 msgstr "Plantilla de producto"
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.productivity
+#, fuzzy
+msgid "Productivity"
+msgstr "Producto"
+
+#. module: apps_product_creator
 #: model:ir.ui.view,arch_db:apps_product_creator.odoo_module_form_view
 msgid "Products"
 msgstr "Productos"
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.project
+msgid "Project"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.purchases
+msgid "Purchases"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.sales
+msgid "Sales"
+msgstr ""
 
 #. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_summary
@@ -146,11 +223,32 @@ msgid "Version (Manifest)"
 msgstr "Versión (Manifiesto)"
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.warehouse
+msgid "Warehouse"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.website
+msgid "Website"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_website
 msgid "Website (Manifest)"
 msgstr "Página web (Manifiesto)"
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.ecommerce
+msgid "eCommerce"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model,name:apps_product_creator.model_odoo_module
 msgid "odoo.module"
+msgstr "odoo.module"
+
+#. module: apps_product_creator
+#: model:ir.model,name:apps_product_creator.model_odoo_module_version
+#, fuzzy
+msgid "odoo.module.version"
 msgstr "odoo.module"
