--- a/apps_product_creator/i18n/fr.po
+++ b/apps_product_creator/i18n/fr.po
@@ -64,6 +64,11 @@ msgid "9.0"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.accounting
+msgid "Accounting"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_author_ids
 msgid "Authors"
 msgstr ""
@@ -72,7 +77,22 @@ msgstr ""
 #: model:ir.actions.server,name:apps_product_creator.cron_update_organization_ir_actions_server
 #: model:ir.cron,cron_name:apps_product_creator.cron_update_organization
 #: model:ir.cron,name:apps_product_creator.cron_update_organization
-msgid "Create product variants for each module version"
+msgid "Create/Update product variants for each module version"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.discuss
+msgid "Discuss"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.document_management
+msgid "Document Management"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.extra_tools
+msgid "Extra Tools"
 msgstr ""
 
 #. module: apps_product_creator
@@ -86,9 +106,19 @@ msgid "HTML of the RST Description"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.human_resources
+msgid "Human Resources"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_image_module
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_template_image_module
 msgid "Icon Image"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.industries
+msgid "Industries"
 msgstr ""
 
 #. module: apps_product_creator
@@ -97,8 +127,23 @@ msgid "License"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.localization
+msgid "Localization"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.manufacturing
+msgid "Manufacturing"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.ui.view,arch_db:apps_product_creator.product_product_form_view
 msgid "Module Informations"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_development_status
+msgid "Module maturity"
 msgstr ""
 
 #. module: apps_product_creator
@@ -114,6 +159,16 @@ msgid "Odoo Version"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.other
+msgid "Other"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.point_of_sale
+msgid "Point of Sale"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model,name:apps_product_creator.model_product_product
 msgid "Product"
 msgstr "Produit"
@@ -125,8 +180,29 @@ msgid "Product Template"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.productivity
+#, fuzzy
+msgid "Productivity"
+msgstr "Produit"
+
+#. module: apps_product_creator
 #: model:ir.ui.view,arch_db:apps_product_creator.odoo_module_form_view
 msgid "Products"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.project
+msgid "Project"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.purchases
+msgid "Purchases"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.sales
+msgid "Sales"
 msgstr ""
 
 #. module: apps_product_creator
@@ -146,11 +222,31 @@ msgid "Version (Manifest)"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.warehouse
+msgid "Warehouse"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.website
+msgid "Website"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model.fields,field_description:apps_product_creator.field_product_product_app_website
 msgid "Website (Manifest)"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.public.category,name:apps_product_creator.ecommerce
+msgid "eCommerce"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:ir.model,name:apps_product_creator.model_odoo_module
 msgid "odoo.module"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:ir.model,name:apps_product_creator.model_odoo_module_version
+msgid "odoo.module.version"
 msgstr ""
