[MIG] apps_product_creator: Migration scripts
* Add XML-ID if 12.0 attribute value was manually added in the DB
* Add in advance 13.0 and 14.0 attribute versions for avoiding this problem in future versions

--- a/apps_product_creator/i18n/es.po
+++ b/apps_product_creator/i18n/es.po
@@ -39,6 +39,16 @@ msgid "12.0"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:product.attribute.value,name:apps_product_creator.odoo_version_130
+msgid "13.0"
+msgstr ""
+
+#. module: apps_product_creator
+#: model:product.attribute.value,name:apps_product_creator.odoo_version_140
+msgid "14.0"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:product.attribute.value,name:apps_product_creator.odoo_version_50
 msgid "5.0"
 msgstr "5.0"
