--- a/website_apps_store/i18n/hr.po
+++ b/website_apps_store/i18n/hr.po
@@ -1,6 +1,6 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* website_apps_store
+# 	* website_apps_store
 #
 msgid ""
 msgstr ""
@@ -13,8 +13,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
-"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 3.10\n"
 
 #. module: website_apps_store
@@ -81,11 +81,10 @@ msgstr "Kategorija:"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
-msgid "Download\n"
-"                                    <span class=\"fa fa-download\"/>"
+msgid ""
+"Download\n"
+"                                <span class=\"fa fa-download\"/>"
 msgstr ""
-"Preuzimanje\n"
-"                                    <span class=\"fa fa-download\"/>"
 
 #. module: website_apps_store
 #: model:ir.model.fields,field_description:website_apps_store.field_product_product__download_count
@@ -147,3 +146,10 @@ msgstr "Ukupni broj preuzimanja"
 #: model_terms:ir.ui.view,arch_db:website_apps_store.version_display
 msgid "Version:"
 msgstr ""
+
+#~ msgid ""
+#~ "Download\n"
+#~ "                                    <span class=\"fa fa-download\"/>"
+#~ msgstr ""
+#~ "Preuzimanje\n"
+#~ "                                    <span class=\"fa fa-download\"/>"
