--- a/website_apps_store/i18n/website_apps_store.pot
+++ b/website_apps_store/i18n/website_apps_store.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* website_apps_store
+# 	* website_apps_store
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,8 +77,9 @@ msgstr ""
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
-msgid "Download\n"
-"                                    <span class=\"fa fa-download\"/>"
+msgid ""
+"Download\n"
+"                                <span class=\"fa fa-download\"/>"
 msgstr ""
 
 #. module: website_apps_store
@@ -141,4 +142,3 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_apps_store.version_display
 msgid "Version:"
 msgstr ""
-
