[FIX] apps_product_creator: Add dependent_product_ids
This field is needed in this module but was only being declared in the apps_download module.
apps_download depends on this, so we can move the field declaration here.

TT30343

--- a/apps_product_creator/i18n/es.po
+++ b/apps_product_creator/i18n/es.po
@@ -96,6 +96,11 @@ msgid "Create/Update product variants for each module version"
 msgstr ""
 
 #. module: apps_product_creator
+#: model:ir.model.fields,field_description:apps_product_creator.field_product_product__dependent_product_ids
+msgid "Dependent Products"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:product.public.category,name:apps_product_creator.discuss
 msgid "Discuss"
 msgstr ""
