--- a/apps_product_creator/i18n/it.po
+++ b/apps_product_creator/i18n/it.po
@@ -94,6 +94,11 @@ msgid "Create/Update product variants for each module version"
 msgstr "Crea/Aggiorna le varianti prodotto per ciascuna versione del modulo"
 
 #. module: apps_product_creator
+#: model:ir.model.fields,field_description:apps_product_creator.field_product_product__dependent_product_ids
+msgid "Dependent Products"
+msgstr ""
+
+#. module: apps_product_creator
 #: model:product.public.category,name:apps_product_creator.discuss
 msgid "Discuss"
 msgstr "Comunicazioni"
