--- a/website_apps_store/i18n/es.po
+++ b/website_apps_store/i18n/es.po
@@ -7,48 +7,50 @@ msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-26 03:55+0000\n"
-"PO-Revision-Date: 2021-08-26 03:55+0000\n"
+"PO-Revision-Date: 2021-08-26 00:09-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"X-Generator: Poedit 2.3\n"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>Author: </b>"
-msgstr ""
+msgstr "<b>Autor: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>License: </b>"
-msgstr ""
+msgstr "<b>Licencia: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>Maintainer: </b>"
-msgstr ""
+msgstr "<b>Mantenedor: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>Repository: </b>"
-msgstr ""
+msgstr "<b>Repositorio: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>Technical Name: </b>"
-msgstr ""
+msgstr "<b>Nombre técnico: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>Version: </b>"
-msgstr ""
+msgstr "<b>Versión: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "<b>Website: </b>"
-msgstr ""
+msgstr "<b>Sitio web: </b>"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
@@ -60,7 +62,7 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_apps_store.maturity_display
 #: model_terms:ir.ui.view,arch_db:website_apps_store.version_display
 msgid "All"
-msgstr ""
+msgstr "Todas"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.maturity_display
@@ -75,13 +77,13 @@ msgstr ""
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.category_display
 msgid "Category:"
-msgstr ""
+msgstr "Categoría"
 
 #. module: website_apps_store
 #: model:ir.model.fields,field_description:website_apps_store.field_product_product__display_name
 #: model:ir.model.fields,field_description:website_apps_store.field_product_template__display_name
 msgid "Display Name"
-msgstr ""
+msgstr "Nombre mostrado"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
@@ -89,45 +91,48 @@ msgid ""
 "Download\n"
 "                            <span class=\"fa fa-download\"/>"
 msgstr ""
+"Descargar\n"
+"                            <span class=\"fa fa-download\"/>"
 
 #. module: website_apps_store
 #: model:ir.model.fields,field_description:website_apps_store.field_product_product__download_count
 msgid "Download Count"
-msgstr ""
+msgstr "Descargas"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.sort_customize
 msgid "Download Count - Max to Min"
-msgstr ""
+msgstr "Descargas - Max to Min"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.sort_customize
 msgid "Download Count - Min to Max"
-msgstr ""
+msgstr "Descargas - Min to Max"
 
 #. module: website_apps_store
 #. openerp-web
 #: code:addons/website_apps_store/static/src/js/website_sale.js:0
-#, python-format
+#, fuzzy, python-format
 msgid "Error"
-msgstr ""
+msgstr "¡Error!"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.suspicious_product_download
 msgid "Error during product download"
-msgstr ""
+msgstr "Ocurrió un error mientras se descargaba el producto"
 
 #. module: website_apps_store
 #: model:ir.model.fields,field_description:website_apps_store.field_product_product__id
 #: model:ir.model.fields,field_description:website_apps_store.field_product_template__id
+#, fuzzy
 msgid "ID"
-msgstr ""
+msgstr "ID (identificación)"
 
 #. module: website_apps_store
 #: model:ir.model.fields,field_description:website_apps_store.field_product_product____last_update
 #: model:ir.model.fields,field_description:website_apps_store.field_product_template____last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Última modificación el"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.maturity_display
@@ -137,22 +142,22 @@ msgstr ""
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.maturity_display
 msgid "Maturity:"
-msgstr ""
+msgstr "Madurez:"
 
 #. module: website_apps_store
 #: model:ir.model,name:website_apps_store.model_product_product
 msgid "Product"
-msgstr ""
+msgstr "Producto"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.product
 msgid "Product Name"
-msgstr ""
+msgstr "Nombre del producto"
 
 #. module: website_apps_store
 #: model:ir.model,name:website_apps_store.model_product_template
 msgid "Product Template"
-msgstr ""
+msgstr "Plantilla de producto"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.maturity_display
@@ -163,15 +168,15 @@ msgstr ""
 #: code:addons/website_apps_store/controllers/main.py:0
 #, python-format
 msgid "Suspicious activity detected by <b>Google reCaptcha<b/>."
-msgstr ""
+msgstr "Actividad sospechosa detectada por <b>Google reCaptcha<b/>."
 
 #. module: website_apps_store
 #: model:ir.model.fields,field_description:website_apps_store.field_product_product__total_download_count
 #: model:ir.model.fields,field_description:website_apps_store.field_product_template__total_download_count
 msgid "Total Download Count"
-msgstr ""
+msgstr "Total de descargas"
 
 #. module: website_apps_store
 #: model_terms:ir.ui.view,arch_db:website_apps_store.version_display
 msgid "Version:"
-msgstr ""
+msgstr "Versión:"
